# chat2api-rust

./: .env.example  .gitignore  .markdownlintignore  Cargo.toml  GROK_SETUP.md  README.md  api.http  docker-compose-warp.yml  test_rquest.rs  test_rust.rs  tmp_rquest.json
.github/workflows/: build_docker_main.yml  build_docker_rust_dev.yml  build_docker_rust_main.yml
docs/: rust_deploy.md  rust_usage.md
rust_docs/: Dockerfile  api.http  architecture.md  deploy.md  dockerfile.md  persistence.md  rust_deploy.md  rust_usage.md  tech_design.md  usage.md  workflow.md
src/: config.rs  globals.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs  tokens.rs
src/chatgpt/: auth.rs  client.rs  format.rs  mod.rs  pow.rs  service.rs  turnstile.rs
src/grok/: flaresolverr.rs  mod.rs  service.rs  stream.rs  tool_sieve.rs
src/templates/: grok_tokens.html  tokens.html
