[package]
name = "chat2api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
wreq = { version = "5", features = ["json", "stream", "socks", "gzip", "brotli", "deflate", "zstd"] }
wreq-util = { version = "2", features = ["emulation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
tiktoken-rs = "0.6"
tera = "1.20"
futures-util = "0.3"
md5 = "0.7"
regex = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
